--- a/3_flexbox/2_flexrow_x/index.html
+++ b/3_flexbox/2_flexrow_x/index.html
@@ -12,29 +12,28 @@
 
 <body>
     <div class="container">
-       <div class="d-flex  row"><!--abre o flexbox-->
+       <div class="d-flex flex-row"><!--abre o flexbox-->
         <!--p: espaçamento interno-->
         <div class="p-2">2</div>
-        <div class="p-3">3</div>
-        <div class="p-4">4</div>
+        <div class="p-2">3</div>
+        <div class="p-2">4</div>
        </div>
-    </div>
-    <div class="d-inline-flex row"><!--abre o flexbox-->
-     <div class="p-2">2</div>
-     <div class="p-3">3</div>
-     <div class="p-4">4</div>
-    </div>
-    <div class="d-inline-flex row"><!--abre o flexbox-->
-     <div class="p-2">2</div>
-     <div class="p-3">3</div>
-     <div class="p-4">4</div>
-    </div>
-       
+        <div class="d-flex flex-row-reverse"><!--abre o flexbox-->
+         <div class="p-2">2</div>
+         <div class="p-2">3</div>
+         <div class="p-2">4</div>
+        </div>
+        <!--acima da resoluçao sm ele ativa o reverse-->
+        <div class="d-flex flex-sm-row-reverse"><!--abre o flexbox-->
+         <div class="p-2">2</div>
+         <div class="p-2">3</div>
+         <div class="p-2">4</div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-</body>
+    </body>
 
 </html>
